# Aegis-Health

./: .env.example  .gitignore  README.md  docker-compose.yml
ML/data/processed/: diabetes_processed_v1.csv
ML/data_processing/: data_process.py
ML/feature_engineering/: feature_engineering.py
ML/models/: diabetes_model_v1.pkl  preprocessor_v1.pkl
ML/notebooks/: diabetes_eda.ipynb
ML/training/: train_diabetes.py
aegis-health-ml/: Makefile  README.md  pyproject.toml  requirements.txt
aegis-health-ml/aegis_health_ml/: __init__.py  config.py  dataset.py  features.py  plots.py
aegis-health-ml/aegis_health_ml/modeling/: __init__.py  predict.py  train.py
aegis-health-ml/data/interim/: diabetes_interim.csv
aegis-health-ml/data/processed/: diabetes_processed.csv
aegis-health-ml/docs/: mkdocs.yml
aegis-health-ml/docs/docs/: getting-started.md  index.md
aegis-health-ml/models/: diabetes_model.joblib  metrics.json
aegis-health-ml/notebooks/: 1.0-eda.ipynb  2.0-feature-engineering.ipynb  3.0-model-training.ipynb  4.0-results.ipynb
backend/: .dockerignore  Dockerfile  app.py  main.py  requirements.txt
backend/app/api/: __init__.py  deeps.py  hospital.py  patient.py  prediction.py
backend/app/core/: security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: __init__.py  hospital.py  patient.py  prediction.py
backend/app/services/: auth_services.py  prediction_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: global.css  layout.tsx
frontend/app/login/: page.tsx
frontend/lib/: axios.ts
(+16 files in other folders)
