[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aegis_health_ml"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]

requires-python = ">=3.10"


[tool.ruff]
line-length = 99
src = ["aegis_health_ml"]
include = ["pyproject.toml", "aegis_health_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["aegis_health_ml"]
force-sort-within-sections = true


